<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_screen"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="250dp"
            android:padding="20dp">

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/signup_confirm"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/confirm_password"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/signup_button"
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:background="@color/teal_200"
                android:text="@string/sign_up"
                android:textSize="25sp"
                android:gravity="center"
                app:cornerRadius = "40dp"/>

            <TextView
                android:id="@+id/loginRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_an_user_login"
                android:layout_gravity="center"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>