<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signin_screen"
    tools:context=".SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="300dp"
                android:padding="20dp">

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:padding="8dp"
                    android:hint="@string/email"
                    android:textSize="20sp"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:hint="@string/password"
                    android:drawablePadding="8dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>


                <Button
                    android:id="@+id/login_button"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/login"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:background="@color/teal_200"
                    app:cornerRadius = "30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgot_password"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:padding="8dp"
                    android:text="@string/forgot_password"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/signupRedirectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_yet_registered_signup"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:layout_marginTop="14dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>